# hciReduce

./: .gitignore  CMakeLists.txt  readme.md
doc/: groupdefs.dox
src/: CMakeLists.txt
src/apps/: klipReduce.cpp
src/common/: ADIDerotator.cpp  ADIDerotator.hpp  ADIobservation.cpp  ADIobservation.hpp  CMakeLists.txt  HCIobservation.cpp  HCIobservation.hpp  KLIPreduction.cpp  KLIPreduction.hpp
